# TZ-OrganizationalStructureAPI

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py  errors.py
app/api/v1/: departments.py  employees.py  router.py
app/core/: config.py  database.py  logging.py
app/models/: org.py
app/repositories/: base.py  department.py  employee.py
app/schemas/: department.py  employee.py
app/services/: department.py  employee.py
migrations/: env.py
migrations/versions/: 001_initial.py  002_remove_cascade_parent.py  003_remove_cascade_employees.py
tests/: conftest.py  test_departments.py  test_employees.py
