[project]
name = "tz-organizationalstructureapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
    "sqlalchemy[asyncio]>=2.0.35,<2.1",
    "asyncpg>=0.30.0,<0.31",
    "alembic>=1.14.0,<2",
    "pydantic>=2.9.0,<3",
    "pydantic-settings>=2.6.0,<3",
    "structlog>=24.4.0,<25",
    "pytest>=8.3.0,<9",
    "pytest-asyncio>=0.24.0,<1",
    "httpx>=0.28.0,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"  
testpaths = ["tests"]